--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -9,6 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Postgres": "Host=localhost;Port=5434;Database=TestAutodoc;Username=postgres;Password=postgres",
-    "PostgresDocker": "Host=postgre_db;Port=5434;Database=TestAutodoc;Username=postgres;Password=postgres"
+    "PostgresDocker": "Host=postgre_db;Port=5434;Database=TestAutodoc;Username=postgres;Password=postgres",
+    "SqlServer": "Server=localhost,50533;Database=AssesmentAutodoc;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=true;",
+    "SqlServerDocker": "Server=sql_server_db;Database=AssesmentAutodoc;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=true;"
   }
 }
